syntax = "proto3";

option go_package = "pkg/api/client";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "proto/google/api/annotations.proto";

service OrderService {
  rpc AddItemToOrder(AddItemRequest) returns (AddItemResponse) {
    option (google.api.http) = {
      post: "/v1/orders/{order_id}/items"
      body: "*"
    };
  }

  rpc RemoveItemFromOrder(RemoveItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/orders/items/{item_id}"
    };
  }

  rpc UpdateItemInOrder(UpdateItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/v1/orders/items/{item_id}"
      body: "*"
    };
  }

  rpc ListItemsFromOrder(ListItemsRequest) returns (ListItemsResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{order_id}/items"
    };
  }

  rpc CancelOrder(CancelOrderRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/orders/{order_id}:cancel"
    };
  }

  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {
    option (google.api.http) = {
      post: "/v1/orders"
      body: "*"
    };
  }

  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse) {
    option (google.api.http) = {
      patch: "/v1/orders/{order_id}/status"
      body: "*"
    };
  }

  rpc UpdateOrderTotal(UpdateOrderTotalRequest) returns (UpdateOrderTotalResponse) {
    option (google.api.http) = {
      patch: "/v1/orders/{order_id}/total"
      body: "*"
    };
  }

  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {
    option (google.api.http) = {
      get: "/v1/orders/{order_id}"
    };
  }

  rpc ListOrdersByUser(ListOrdersRequest) returns (ListOrdersResponse) {
    option (google.api.http) = {
      get: "/v1/users/{user_id}/orders"
    };
  }
}

message UpdateOrderTotalRequest {
  string user_id = 1;
  string order_id = 2;
  uint64 new_total = 3;
}

message UpdateOrderTotalResponse {
  Order order = 1;
}

message CancelOrderRequest {
  string user_id = 1;
  string order_id = 2;
}

message CreateOrderRequest {
  string user_id = 1;
}

message CreateOrderResponse {
  string order_id = 1;
}

message GetOrderRequest {
  string user_id = 1;
  string order_id = 2;
}

message UpdateOrderStatusRequest {
  string user_id = 1;
  string order_id = 2;
  string status = 3;
}

message UpdateOrderStatusResponse {
  Order order = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message ListOrdersRequest {
  string user_id = 1;
} 

message ListOrdersResponse {
  repeated Order orders = 1;
}

message AddItemRequest {
  string order_id = 1;
  string product_id = 2;
  int64 quantity = 3;
  uint64 productPrice = 4;
}

message AddItemResponse {
  string item_id = 1;
}

message RemoveItemRequest {
  string item_id = 1;
}

//message RemoveItemResponse {
//  string status = 1;
//}

message UpdateItemRequest {
  string item_id = 1;
  int64 quantity = 2;
}

//message UpdateItemResponse {
//  string status = 1;
//}

message ListItemsRequest {
  string user_id = 1;
  string order_id = 2;
}

message ListItemsResponse {
  repeated Item items = 1;
}

message Order {
  string order_id = 1;
  string user_id = 2;
  uint64 total_amount = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message Item {
  string item_id = 1;
  string product_id = 2;
  int64 quantity = 3;
  int64 price = 4;
}